tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.diagnostic
diagnostic error code=O0001 family=ownership message="cannot assign to borrowed binding 'number'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari" bytes=157
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari" line=8 column=3 end_line=8 end_column=9 byte_start=117 byte_end=123 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari:8:3\n   |\n 8 |   number = 8;\n   |   ^^^^^^"
